# sdr_server

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  debug.sh  release.sh  test.sh
containers/: CMakeLists.txt
containers/examples/skeleton/: CMakeLists.txt  skeleton.c
containers/test/: CMakeLists.txt  common.c
doc/: diagram.drawio  example.cfg
include/: config.h  container.h  factory.h  main_storage.h  module.h  option.h  storage.h  thread.h
include/routines/: autoarray.h  dbg.h  list.h  storage.h
include/test/: README.md  cheat.h  cheats.h
old/: CMakeLists.txt  example.cfg
old/src/: list.c  list.h  main.c  module.c  module.h  ring.c  ring.h
old/src/modules/test/: source.c
old/test/: list.c  list.h  main.c  test.c  test.h
old/tmp/: config.c  config.h  handler.c  handler.h  modules.c  modules.h
src/: config.c  container.c  main.c  main_storage.c  module.c  storage.c
src/lib/: config.c  container.c  factory.c  module.c  option.c  storage.c  thread.c
src/lib/routines/: autoarray.c  dbg.c
src/routines/: list.c  storage.c
test/: CMakeLists.txt  config.c  factory.c  module.c  routines_autoarray.c  routines_list.c  storage.c  test.c
test/config/: test1.cfg  test2.cfg
